[package]
name = "math_rs"
version = "0.1.0"
authors = ["mkd <monkeydioude@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.sdl2]
version = "0.34"
features = ["bundled", "static-link"]

[[bin]]
name = "math_rs"
path = "src/main.rs"
